[gd_scene load_steps=14 format=2]

[ext_resource path="res://SavedLevels/Aquire-BW0ox.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Menu/PlayerMain/PlayerMain.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/logo.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Audiowide-en4g.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/GuiComponents/GUI-cyberpunk.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menu/PlayerMain/PlayerMainButtonHover.tres" type="StyleBox" id=6]
[ext_resource path="res://Scenes/Menu/PlayerMain/PlayerMainButtonPressed.tres" type="StyleBox" id=7]
[ext_resource path="res://Scenes/Menu/PlayerMain/PlayerMainButtonNormal.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 600, 1200, 580, 180 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 610, 1200, 560, 180 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 20, 1200, 560, 180 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[node name="Control3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="UserInfoButton" type="Button" parent="."]
margin_left = 164.5
margin_top = 732.0
margin_right = 740.5
margin_bottom = 812.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "User Info"

[node name="ConfigButton" type="Button" parent="."]
margin_left = 164.5
margin_top = 628.0
margin_right = 740.5
margin_bottom = 708.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Configs"

[node name="LogoutButton" type="Button" parent="."]
margin_left = 164.5
margin_top = 836.0
margin_right = 740.5
margin_bottom = 916.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Logout"

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 437.5, 327 )
scale = Vector2( 0.203, 0.203 )
texture = ExtResource( 3 )

[node name="Followers" type="Label" parent="."]
margin_left = 1396.0
margin_top = 593.0
margin_right = 1840.0
margin_bottom = 657.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "Followers"
align = 1

[node name="SeeFollowersButton" type="Button" parent="Followers"]
margin_left = 5.0
margin_top = 199.0
margin_right = 389.0
margin_bottom = 327.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "See Followers"

[node name="FindUserButton" type="Button" parent="Followers"]
margin_left = 5.0
margin_top = 39.0
margin_right = 389.0
margin_bottom = 167.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Find User"

[node name="Levels" type="Label" parent="."]
margin_left = 888.0
margin_top = 67.0
margin_right = 1832.0
margin_bottom = 131.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Levels"
align = 1
max_lines_visible = 1

[node name="PopularLevelsButton" type="Button" parent="Levels"]
margin_left = 46.0
margin_top = 171.0
margin_right = 430.0
margin_bottom = 299.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Popular Levels"

[node name="PopularPathsButton" type="Button" parent="Levels"]
margin_left = 510.0
margin_top = 171.0
margin_right = 894.0
margin_bottom = 299.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Popular Paths"

[node name="FindPathsButton" type="Button" parent="Levels"]
margin_left = 510.0
margin_top = 331.0
margin_right = 894.0
margin_bottom = 459.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Find Paths"

[node name="FindLevelsButton" type="Button" parent="Levels"]
margin_left = 46.0
margin_top = 331.0
margin_right = 430.0
margin_bottom = 459.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Find Levels"

[node name="YourStuff" type="Label" parent="."]
margin_left = 932.0
margin_top = 593.0
margin_right = 1267.0
margin_bottom = 657.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "Your stuff"
align = 1

[node name="CreateButton" type="Button" parent="YourStuff"]
margin_left = -1.0
margin_top = 39.0
margin_right = 383.0
margin_bottom = 167.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Create Level"

[node name="ManageButton" type="Button" parent="YourStuff"]
margin_left = -1.0
margin_top = 199.0
margin_right = 383.0
margin_bottom = 327.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Manage"
